[package]
name = "triadic-census"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/triadic-census-rs"
description = "Calculates the triadic census for directed graphs"
keywords = ["graph", "algorithm"]

[dependencies]
petgraph = "*"
fixedbitset = "^0.0.5"
