[package]
name = "triadic-census"
version = "0.2.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/triadic-census-rs"
description = "Calculates the triadic census for directed graphs"
keywords = ["graph", "algorithm", "similarity"]

[dependencies]
petgraph = "0.2.0"
fixedbitset = "0.1.0"
